--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,9 @@
 # DISPLAY_SIZE=0 --> 128*64, 1 --> 128*32
 
 [platformio]
-env_default = esp12e
+#env_default = esp12e
+default_envs = esp12e
+
 
 [env:esp01]
 board = esp01_1m
@@ -30,13 +32,13 @@ build_flags = -D MQTT_MAX_PACKET_SIZE=1500 -D BOARD_ESP01
 
 platform = espressif8266
 framework = arduino
-lib_deps = 
+lib_deps =
   ArduinoJson@~5.13
   ESP8266_SSD1306
   https://github.com/markszabo/IRremoteESP8266.git
   PubSubClient
   WifiManager
-upload_port = /dev/ttyUSB0
+upload_port = com4
 
 [env:esp12e]
 board = esp12e
@@ -46,13 +48,13 @@ build_flags = -D MQTT_MAX_PACKET_SIZE=1500 -D BOARD_ESP12E -D DISPLAY_SIZE=1
 
 platform = espressif8266
 framework = arduino
-lib_deps = 
+lib_deps =
   ArduinoJson@~5.13
   ESP8266_SSD1306
   https://github.com/markszabo/IRremoteESP8266.git
   PubSubClient
   WifiManager
-upload_port = /dev/ttyUSB0
+upload_port = com4
 
 [env:nodemcu]
 board = nodemcu
@@ -61,11 +63,10 @@ build_flags = -D MQTT_MAX_PACKET_SIZE=1500 -D BOARD_NODEMCU
 
 platform = espressif8266
 framework = arduino
-lib_deps = 
+lib_deps =
   ArduinoJson@~5.13
   ESP8266_SSD1306
   https://github.com/markszabo/IRremoteESP8266.git
   PubSubClient
   WifiManager
-upload_port = /dev/ttyUSB0
-
+upload_port = com4
